# fbc

./: .travis.yml
src/compiler/: ir-hlc.bas
src/gfxlib2/: CMakeLists.txt  fb_gfx.h  fb_gfx_gl.h  gfx_bsave.c  gfx_circle.c  gfx_get.c  gfx_print_wstr.c
src/gfxlib2/win32/: fb_gfx_win32.h  gfx_driver_ddraw.c  gfx_driver_gdi.c  gfx_driver_opengl.c  gfx_win32.c
src/rtlib/: CMakeLists.txt  dev_com.c  dev_file_encod_read.c  dev_file_read_wstr.c  dev_file_write_wstr.c  dev_lpt.c  dev_lpt_test.c  dev_pipe_close.c  dev_pipe_open.c  fb_config.h  fb_data.h  fb_private_hdynload.h  fb_unicode.h  file_datetime.c  file_hconvpath.c  file_lineinp.c  gosub.c  hook_print_wstr.c  hook_printstr.c  io_widthdev.c  io_write_wstr.c  math_fix.c  math_rnd.c  rtlibConfig.cmake.in  signals.c  str_convfrom.c  strw_convfrom.c  sys_chdir.c  sys_environ.c  sys_mkdir.c  sys_rmdir.c  utf_convfrom_char.c  utf_convfrom_wchar.c  utf_convto_char.c  utf_convto_wchar.c
src/rtlib/win32/: fb_win32.h  file_dir.c  file_hlock.c  hinit.c  io_printbuff.c  io_printbuff_wstr.c  io_printer.c  sys_execex.c  thread_core.c
